# skull_transparency

./: .gitignore  LICENSE  NOTICE  README.md  REPRODUCE.md  pyproject.toml
docs/: input_format.md  tutorial.md
examples/: placement_gui.py
examples/brain_center/: run_brain_center.py  view_braincenter_napari.py
examples/halle_dentate/: array_placement_figure.py  config.json  run_pipeline.py  surface_integral_placement.py
examples/synthetic/: run_synthetic.py
notebooks/: skull_transparency_colab_500kHz.ipynb
src/skull_transparency/: __init__.py  brain_center.py  bundle.py  cli.py  complex_field.py  metrics.py  neuromod.py  paths.py  placement.py  position_tool.py  projection.py  registration.py  render.py  sample.py  score.py  surface.py  transducer.py  transducer_spec.py  transparency.py
src/skull_transparency/sim/: README.md  __init__.py  _common.py  cli.py  extract.py  forcoef.py  fwio.py  launch_core.py  launchers.py  mlcompat.py  prepare.py  verify.py
tests/: conftest.py  test_brain_center.py  test_cap_placement.py  test_cli.py  test_extract.py  test_placement.py  test_position_tool.py  test_prepare_build.py  test_prepare_descriptor.py  test_prepare_pose.py  test_prepare_recording.py  test_prepare_resample.py  test_registration.py  test_sample_bundle.py  test_score.py  test_shell_recorder.py  test_sim_generic.py  test_sim_launchers.py  test_surface_integral.py  test_transducer_spec.py  test_transparency_golden.py  test_world_frame.py
tutorial/: Makefile  build_grid.py  figs.py  tex2md.py  tutorial.md  tutorial.tex
